# ENCS

./: .gitignore  README.md  cabal.project  calculator.json  encs-params.json  encs.cabal  hie.yaml
src/ENCOINS/ENCS/: Distribution.hs  OffChain.hs  OnChain.hs  Types.hs
src/ENCOINS/ENCS/Distribution/: IO.hs
test/: Main.hs
test/Tests/: Distribution.hs
